# shopping-cart

./: .gitignore  README.md  docker-compose.local.yaml  docker-compose.yaml  pyproject.toml  start.sh
docker/: Dockerfile
docker/base/: Dockerfile
src/: main.py
src/services/cart/: main.py  model.py
src/services/cart_detail/: main.py  model.py
src/services/database/: __init__.py  model.py  run_db.sh
src/services/entry/: main.py  model.py
src/services/order/: main.py  model.py
src/services/product/: main.py  model.py
src/services/user/: main.py
