[tool.poetry]
name = "shopping-cart"
version = "0.1.0"
description = ""
authors = ["anotherKyleFrom1994 <anotherKyleFrom1994@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.79.0"
uvicorn = "^0.18.2"
pydantic = "^1.9.1"
requests = "^2.28.1"
alembic = "^1.8.1"
psycopg2-binary = "^2.9.3"
asyncpg = "^0.26.0"
SQLAlchemy = "^1.4.39"
databases = "^0.6.0"
gunicorn = "^20.1.0"
fastapi-users = {extras = ["sqlalchemy"], version = "^10.1.4"}

[tool.poetry.dev-dependencies]
black = "^22.6.0"
pytest = "^7.1.2"
ipython = "^7.34.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
